I have updated the places.css and I have removed the Section conflict,Anay

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
     <!-- Location Nearby :- Sam-->
     <!-- Places To Visit Near US Section:- SAM-->
-    <section class="my-container">
+    <section class="my-container" style="padding: 100px 200px;">
       <video
         src="./assets/videos/beach.mp4"
         class="video active"
