I have made the About us Section,Anay

--- a/index.html
+++ b/index.html
@@ -7,11 +7,17 @@
     <title>Travel</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link rel="stylesheet" href="./assets/css/contact.css" />
+    <link rel="stylesheet" href="./assets/css/aboutus.css" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <link rel="stylesheet" href="./assets/css/places.css" />
+
+    <!-- Font Merriweather-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
   </head>
   <body>
     <!----------------------------------------------------------
@@ -20,7 +26,7 @@
 
     <nav class="navbar navbar-expand-lg">
       <div class="container-lg">
-        <a class="navbar-brand text-white fw-bold" href="#">DevSquad</a>
+        <a class="navbar-brand text-white fw-bold" href="#">TrekAndTrails</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -108,7 +114,7 @@
     <!--------------------------------------------------------------------
       Carousel :- Suyyash
     --------------------------------------------------------------------->
-    <section class="landing carousel1" id="home">
+    <section class="landing carousel1" id="home" style="height: 100vh;">
       <div class="carousel-item1">
         <div class="carousel-item1--1"></div>
         <div class="carousel-item1--2"></div>
@@ -131,14 +137,26 @@
     </section>
 
     <!-- About Us :- Anay-->
-
+    <section class="aabout-section">
+      <div class="acontainer">
+        <div class="aabout-content">
+          <h2 class="aabout">About Us : T and T</h2>
+          <p style="margin-top: 40px; margin-bottom: 2rem;text-align: left;font-family: 'Merriweather', serif;">Welcome to <span style="color: rgb(255, 174, 0);">Trek and Trails </span> !  We are passionate about exploring the world and helping you plan
+            unforgettable journeys. Our team of experienced travelers is here to assist you in making the most of
+            your adventures.</p>
+          <p style="margin-top: 40px; margin-bottom: 2rem;text-align: left;font-family: 'Merriweather', serif;">Whether you seek thrilling escapades, cultural encounters, or serene getaways, we have the perfect
+            destinations for you. Our mission is to make travel planning seamless and enjoyable, so you can focus
+            on creating cherished memories.</p>
+        </div>
+      </div>
+    </section>
     <!-- Pricing :- Abrar-->
 
     <!-- Blogs :- Praveen-->
 
     <!-- Location Nearby :- Sam-->
     <!-- Places To Visit Near US Section:- SAM-->
-    <section class="my-container" style="padding: 100px 200px;">
+    <section id="section" class="my-container">
       <video
         src="./assets/videos/beach.mp4"
         class="video active"
