praveen-changes-blog-images,blogstyle,cdncss,cdnjs,location-part

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
+     <!-- blogcss -->
+      <link rel="stylesheet" href="./assets/css/blog-style.css">
+      <!-- swiper css -->
+      <link rel="stylesheet" href="./assets/css/cdn.jsdelivr.net_npm_swiper@8.4.7_swiper-bundle.min.css">
   </head>
   <body>
     <!----------------------------------------------------------
@@ -153,7 +157,172 @@
     <!-- Pricing :- Abrar-->
 
     <!-- Blogs :- Praveen-->
+  <section class="loactions-part">
+      <div class="slide-container swiper">
+          <!-- swiper : This class is crucial because Swiper.js looks for elements with this class to initialize the Swiper and apply the slider functionality to it. -->
+          
+          <div class="slide-content">
+              <div class="blog-heading-element btnL" >
+                  <p class="locations-to-visit">Locations to Visit 🌄</p>
+              </div>
 
+              <!--swiper-wrapper: hold the cards together for using swiping functionality. without swiper-wrapper class cards will scatter - inbuild class of swiperJs -->
+              <div class="card-wrapper swiper-wrapper">  
+      
+                  <div class="card swiper-slide">  
+                      <!-- need animation part like flying -->
+                      <!-- swiper-slide :This is a CSS class used to define each individual slide within the Swiper component.  -->
+                      <div class="image-content">
+                          <span class="overlay"></span>
+
+                          <div class="card-image">
+                              <img src="./assets/blog-images/pexels-dương-nhân-1093946.jpg" alt="" class="card-img">
+                          </div>
+                      </div>
+
+                      <div class="card-content">
+                          <h2 class="location-name">Darjelling</h2>
+                          <p class="description">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
+
+                          <button class="read-more-button">Read more</button>
+                      </div>
+                  </div>
+                  <div class="card swiper-slide">
+                      <div class="image-content">
+                          <span class="overlay"></span>
+
+                          <div class="card-image">
+                              <img src="./assets/blog-images/pexels-shvets-anna-2563681.jpg" alt="" class="card-img">
+                          </div>
+                      </div>
+
+                      <div class="card-content">
+                          <h2 class="location-name">Shimla</h2>
+                          <p class="description">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
+
+                          <button class="read-more-button">Read more</button>
+                      </div>
+                  </div>
+                  <div class="card swiper-slide">
+                      <div class="image-content">
+                          <span class="overlay"></span>
+
+                          <div class="card-image">
+                              <img src="./assets/blog-images/pexels-leeloo-thefirst-5227440.jpg" alt="" class="card-img">
+                          </div>
+                      </div>
+
+                      <div class="card-content">
+                          <h2 class="location-name">Manali</h2>
+                          <p class="description">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
+
+                          <button class="read-more-button">Read more</button>
+                      </div>
+                  </div>
+                  <div class="card swiper-slide">
+                      <div class="image-content">
+                          <span class="overlay"></span>
+
+                          <div class="card-image">
+                              <img src="./assets/blog-images/pexels-shvets-anna-2563681.jpg" alt="" class="card-img">
+                          </div>
+                      </div>
+
+                      <div class="card-content">
+                          <h2 class="location-name">Ladakh</h2>
+                          <p class="description">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
+
+                          <button class="read-more-button">Read more</button>
+                      </div>
+                  </div>
+                  <div class="card swiper-slide">
+                      <div class="image-content">
+                          <span class="overlay"></span>
+
+                          <div class="card-image">
+                              <img src="./assets/blog-images/pexels-spencer-davis-4356144.jpg" alt="" class="card-img">
+                          </div>
+                      </div>
+
+                      <div class="card-content">
+                          <h2 class="location-name">Uttarkand</h2>
+                          <p class="description">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
+
+                          <button class="read-more-button">Read more</button>
+                      </div>
+                  </div>
+                  <div class="card swiper-slide">
+                      <div class="image-content">
+                          <span class="overlay"></span>
+
+                          <div class="card-image">
+                              <img src="./assets/blog-images/pexels-the-world-hopper-1851481.jpg" alt="" class="card-img">
+                          </div>
+                      </div>
+
+                      <div class="card-content">
+                          <h2 class="location-name">Sikkim</h2>
+                          <p class="description">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
+
+                          <button class="read-more-button">Read more</button>
+                      </div>
+                  </div>
+                  <div class="card swiper-slide">
+                      <div class="image-content">
+                          <span class="overlay"></span>
+
+                          <div class="card-image">
+                              <img src="./assets/blog-images/pexels-leeloo-thefirst-5227440.jpg" alt="" class="card-img">
+                          </div>
+                      </div>
+
+                      <div class="card-content">
+                          <h2 class="location-name">Ooty</h2>
+                          <p class="description">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
+
+                          <button class="read-more-button">Read more</button>
+                      </div>
+                  </div>
+                  <div class="card swiper-slide">
+                      <div class="image-content">
+                          <span class="overlay"></span>
+
+                          <div class="card-image">
+                              <img src="./assets/blog-images/pexels-shvets-anna-2563681.jpg" alt="" class="card-img">
+                          </div>
+                      </div>
+
+                      <div class="card-content">
+                          <h2 class="location-name">Corg</h2>
+                          <p class="description">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
+
+                          <button class="read-more-button">Read more</button>
+                      </div>
+                  </div>
+                  <div class="card swiper-slide">
+                      <div class="image-content">
+                          <span class="overlay"></span>
+
+                          <div class="card-image">
+                              <img src="./assets/blog-images/pexels-dương-nhân-1093946.jpg" alt="" class="card-img">
+                          </div>
+                      </div>
+
+                      <div class="card-content">
+                          <h2 class="location-name">Goa</h2>
+                          <p class="description">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
+
+                          <button class="read-more-button">Read more</button>
+                      </div>
+                  </div>
+              </div>
+          </div>
+
+          <div class="swiper-button-next swiper-navBtn"></div>
+          <div class="swiper-button-prev swiper-navBtn"></div>
+          <div class="swiper-pagination"></div>
+      </div>
+  </section>
     <!-- Location Nearby :- Sam-->
     <!-- Places To Visit Near US Section:- SAM-->
     <section id="section" class="my-container">
@@ -329,5 +498,11 @@
     <!-- index -->
     <script src="index.js"></script>
     <script src="./assets/JS/places.js"></script>
+
+     <!-- praveen JS-->
+      <!-- swiper JS -->
+      <script src="./assets/JS/cdn.jsdelivr.net_npm_swiper@8.4.7_swiper-bundle.min.js"></script>
+      <script src="./assets/JS/script.js"></script>
+      <!-- swiper js end -->
   </body>
 </html>
