--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               <a
                 class="nav-link text-white fw-bold"
                 aria-current="page"
-                href="#"
+                href="#Aabout"
                 >About</a
               >
             </li>
@@ -154,39 +154,27 @@
     </section>
 
     <!-- About Us :- Anay-->
+    <div>
+    <section id="Aabout"><h2 class="aabout">About Us</h2></section>
     <section class="aabout-section">
       <div class="acontainer">
         <div class="aabout-content">
-          <h2 class="aabout">About Us</h2>
-          <p
-            style="
-              margin-top: 40px;
-              margin-bottom: 2rem;
-              text-align: left;
-              font-family: 'Merriweather', serif;
-            "
-          >
-            Welcome to
-            <span style="color: rgb(0, 0, 0)">Trek and Trails </span> ! We are
+          <p style="margin-top: 7%; font-family: 'Merriweather', serif;">Welcome to<span style="color: rgb(0, 0, 0)">Trek and Trails </span> ! We are
             passionate about exploring the world and helping you plan
             unforgettable journeys. Our team of experienced travelers is here to
-            assist you in making the most of your adventures.
-          </p>
-          <p
-            style="
-              margin-top: 40px;
-              margin-bottom: 2rem;
-              text-align: left;
-              font-family: 'Merriweather', serif;
-            "
-          >
+            assist you in making the most of your adventures.</p>
+          <p style="font-family: 'Merriweather', serif;">
             Whether you seek thrilling escapades, cultural encounters, or serene
             getaways, we have the perfect destinations for you. Our mission is
             to make travel planning seamless and enjoyable, so you can focus on
-            creating cherished memories.
-          </p>
+            creating cherished memories.</p>
+        </div>
+        <div>
+          <img class="aimg" src="/Travel Logo.png" alt="" />
         </div>
       </div>
+    </div>
+    <script src="./assets/js/aboutus.js"></script>
     </section>
     <!-- Pricing :- Abrar-->
 
