--- a/index.html
+++ b/index.html
@@ -170,11 +170,10 @@
             creating cherished memories.</p>
         </div>
         <div>
-          <img class="aimg" src="/Travel Logo.png" alt="" />
+          <img class="aimg" src="./Travel Logo.png" alt="" />
         </div>
       </div>
     </div>
-    <script src="./assets/js/aboutus.js"></script>
     </section>
     <!-- Pricing :- Abrar-->
 
