Changes the videos to links and tweaked some colors,SAM

--- a/index.html
+++ b/index.html
@@ -461,33 +461,42 @@
       </div>
       <div class="box-2-sam">
         <video
-          src="./assets/videos/beach.mp4"
-          class="video active"
-          autoplay
-          muted
-          loop
-        ></video>
-        <video
-          src="./assets/videos/hiking.mp4"
-          class="video"
-          autoplay
-          muted
-          loop
-        ></video>
-        <video
-          src="./assets/videos/scuba-diving.mp4"
-          class="video"
-          autoplay
-          muted
-          loop
-        ></video>
-        <video
-          src="./assets/videos/paragliding.mp4"
-          class="video"
-          autoplay
-          muted
-          loop
-        ></video>
+  src="https://drive.google.com/uc?export=download&id=1ezmvci8-xpdU3hIDTBJwjn8jVIN_QLcK"
+  class="video active"
+  autoplay
+  muted
+  loop
+  alt="beach video from pixabay.com"
+></video>
+
+<video
+src="https://drive.google.com/uc?export=download&id=1kH6BnUk-rxj2FcFdLGi0ECkRIFyzxEAN"
+class="video"
+autoplay
+muted
+loop
+alt="hiking video from pixabay.com"
+></video>
+
+<video
+src="https://drive.google.com/uc?export=download&id=1u0vi9ceIzKGe3nK2H2OoetoOa7yqW13L"
+class="video"
+autoplay
+muted
+loop
+alt="scuba-diving video from pixabay.com"
+></video>
+
+
+<video
+src="https://drive.google.com/uc?export=download&id=1TVyV7Rxm2rckhjH_pD1cSQrs2aRnVTWf"
+class="video"
+autoplay
+muted
+loop
+alt="paragliding video from pixabay.com"
+></video>
+
 
         <div class="slider-btns-sam">
           <div class="nav-btn-sam active"></div>
