i changed contact us section

--- a/index.html
+++ b/index.html
@@ -510,44 +510,16 @@ alt="paragliding video from pixabay.com"
     <!-- 
       Contact Us :- Navuuu
     -->
-    <section id="contact">
-      <div class="content">
+    <section id="contact-c">
+      <div class="content-c">
         <h2>Contact Us</h2>
         <p>
           You can reach us at the details mentioned below or you can also send
           your messages in the form
         </p>
       </div>
-      <div class="container">
-        <div class="contactInfo">
-          <div class="box">
-            <div class="icon">
-              <i class="fa fa-map-marker" aria-hidden="true"></i>
-            </div>
-            <div class="text">
-              <h3>Address</h3>
-              <p>69, 123 Street, Falana, Thikana, Jupiter</p>
-            </div>
-          </div>
-          <div class="box">
-            <div class="icon">
-              <i class="fa fa-envelope-o" aria-hidden="true"></i>
-            </div>
-            <div class="text">
-              <h3>Email</h3>
-              <p>NoCapTravels@gmail.com</p>
-            </div>
-          </div>
-          <div class="box">
-            <div class="icon">
-              <i class="fa fa-phone" aria-hidden="true"></i>
-            </div>
-            <div class="text">
-              <h3>Mobile</h3>
-              <p>+1 696 (696) 6969</p>
-            </div>
-          </div>
-        </div>
+      <div class="container-c">
+
         <div class="contactForm">
           <form action="">
             <h2>Share Your Query</h2>
@@ -567,6 +539,35 @@ alt="paragliding video from pixabay.com"
               <input type="submit" name="" value="Send" />
             </div>
           </form>
+        </div>
+        <div class="contactInfo">
+          <div class="box-c">
+            <div class="icon">
+              <i class="fa fa-map-marker" aria-hidden="true"></i>
+            </div>
+            <div class="text-c">
+              <h3>Address</h3>
+              <p>69, 123 Street, Falana, Thikana, Jupiter</p>
+            </div>
+          </div>
+          <div class="box-c">
+            <div class="icon">
+              <i class="fa fa-envelope-o" aria-hidden="true"></i>
+            </div>
+            <div class="text-c">
+              <h3>Email</h3>
+              <p>NoCapTravels@gmail.com</p>
+            </div>
+          </div>
+          <div class="box-c">
+            <div class="icon">
+              <i class="fa fa-phone" aria-hidden="true"></i>
+            </div>
+            <div class="text-c">
+              <h3>Mobile</h3>
+              <p>+1 696 (696) 6969</p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
