made changes to navbar and button of landing page

--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
           <img src="./Travel Logo.png" alt="logo">
         </div>
         <div class="menu" id="menu">
-          <a href="#">Home</a>
-          <a href="#">About Us</a>
-          <a href="#">Locations</a>
+          <a href="#main">Home</a>
+          <a href="#Aabout">About Us</a>
+          <a href="#loactions-part">Locations</a>
           <a href="#">Pricing</a>
-          <a href="#">Blogs</a>
-          <a href="#">Contact Us</a>
+          <a href="#container-sam">Blogs</a>
+          <a href="#contact-c">Contact Us</a>
         </div>
         <div class="hamburger" id="hamburger">
           <div class="line"></div>
@@ -109,7 +109,7 @@
     <!-- Pricing :- Abrar-->
 
     <!-- Blogs :- Praveen-->
-    <section class="loactions-part">
+    <section id="loactions-part" class="loactions-part">
       <div class="slide-container swiper">
         <!-- swiper : This class is crucial because Swiper.js looks for elements with this class to initialize the Swiper and apply the slider functionality to it. -->
 
@@ -348,7 +348,7 @@
     </section>
     <!-- Location Nearby :- Sam-->
     <!-- Places To Visit Near US Section:- SAM-->
-    <section class="container-sam">
+    <section id="container-sam" class="container-sam">
       <div class="box-1-sam">
         <div class="content-sam active">
           <h1>Beaches Of <br /><span>Wonder</span></h1>
