changes in index.js for scrolling effect and few color and padding changes in nav bar and abrar style

--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
           <img src="./Travel Logo.png" alt="logo">
         </div>
         <div class="menu" id="menu">
-          <a href="#main">Home</a>
-          <a href="#Aabout">About Us</a>
-          <a href="#loactions-part">Locations</a>
-          <a href="#">Pricing</a>
-          <a href="#container-sam">Blogs</a>
-          <a href="#contact-c">Contact Us</a>
+          <a class="navbar-text" href="#main">Home</a>
+          <a class="navbar-text" href="#Aabout">About Us</a>
+          <a class="navbar-text" href="#pricing-part">Pricing</a>
+          <a class="navbar-text" href="#loactions-part">Locations</a>
+          <a class="navbar-text" href="#container-sam">Blogs</a>
+          <a class="navbar-text" href="#contact-c">Contact Us</a>
         </div>
         <div class="hamburger" id="hamburger">
           <div class="line"></div>
@@ -111,7 +111,7 @@
     <!-- Pricing :- Abrar-->
 
 
-    <section class="pricing">
+    <section id="pricing-part" class="pricing">
       <div class="container-pr">
         <h1>Popular Indian-Tour Destination</h1>
         <div class="indian-dest-pr">
@@ -671,6 +671,6 @@ alt="paragliding video from pixabay.com"
     <script src="./assets/JS/cdn.jsdelivr.net_npm_swiper@8.4.7_swiper-bundle.min.js"></script>
     <script src="./assets/JS/script.js"></script>  
     <!-- swiper js end -->
-
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </body>
 </html>
