added social media icons

--- a/index.html
+++ b/index.html
@@ -64,6 +64,12 @@
 
 <!--Landing Pgae by Navuuu-->
     <section id="landing-page">
+      
+      <div class="media-icons">
+        <a href="#" ><i class="fa-brands fa-facebook-f"></i></a>
+        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+        <a href="#"><i class="fa-brands fa-twitter"></i></a>
+      </div>
       <div class="blurred-bg">
         <div id="main">
           <div class="main-content">
@@ -672,5 +678,8 @@ alt="paragliding video from pixabay.com"
     <script src="./assets/JS/script.js"></script>  
     <!-- swiper js end -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+
+    <script src="https://kit.fontawesome.com/57b31872ab.js" crossorigin="anonymous"></script>
   </body>
 </html>
