I have added Footer and About Us

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     </section>
 
     <!-- About Us :- Anay-->
-    <div>
+    <div class="about_div">
     <section id="Aabout"><h2 class="aabout">About Us</h2></section>
     <section class="aabout-section">
       <div class="acontainer">
@@ -101,7 +101,7 @@
           <p style="margin-top: 3%; font-family: 'Merriweather', serif;">Welcome to<span style="color: rgb(0, 0, 0)">Trek and Trails </span> ! We are
             passionate about exploring the world and helping you plan
             unforgettable journeys. Our team of experienced travelers is here to
-            assist you in making the most of your adventures.</p>
+            assist you in making the most of your adventures.</p><br>
           <p style="font-family: 'Merriweather', serif;">
             Whether you seek thrilling escapades, cultural encounters, or serene
             getaways, we have the perfect destinations for you. Our mission is
@@ -678,8 +678,34 @@ alt="paragliding video from pixabay.com"
     <script src="./assets/JS/script.js"></script>  
     <!-- swiper js end -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
-
     <script src="https://kit.fontawesome.com/57b31872ab.js" crossorigin="anonymous"></script>
+
+    <!-- Footer -->
+  <footer class="afooter">
+    <div class="afooter-sections">
+      <ul class="afooter-links">
+        <li><a href="##main">Home</a></li>
+        <li><a href="#Aabout">About Us</a></li>
+        <li><a href="#pricing-part">Pricing</a></li>
+        <li><a href="#loactions-part">Location</a></li>
+        <li><a href="#container-sam">Blogs</a></li>
+        <li><a href="#contact-c">Contact Us</a></li> 
+    </ul>
+    <div class="asubscribe">
+      <p class="pyaraa">Subscribe for Monthly Newsletter</p>
+      <form>
+          <input type="email" placeholder="Enter your email">
+          <input type="submit" value="Subscribe">
+      </form>
+      <p class="pyara">&copy; 2023 TrekAndTrails. All rights reserved.</p>
+  </div>
+      <ul class="asocial-icons">
+        <li><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li>
+        <li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
+        <li><a href="#" target="_blank"><i class="fab fa-facebook"></i></a></li>
+    </ul>   
+    </div>
+  </footer>
+    <!-- Footer -->
   </body>
 </html>
