I have complted my part

--- a/index.html
+++ b/index.html
@@ -693,17 +693,19 @@ alt="paragliding video from pixabay.com"
     </ul>
     <div class="asubscribe">
       <p class="pyaraa">Subscribe for Monthly Newsletter</p>
-      <form>
+      <form class="aform">
           <input type="email" placeholder="Enter your email">
           <input type="submit" value="Subscribe">
       </form>
       <p class="pyara">&copy; 2023 TrekAndTrails. All rights reserved.</p>
   </div>
+  <div>
       <ul class="asocial-icons">
         <li><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li>
         <li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
         <li><a href="#" target="_blank"><i class="fab fa-facebook"></i></a></li>
-    </ul>   
+    </ul>  
+  </div> 
     </div>
   </footer>
     <!-- Footer -->
