made minor changes in abrar section as he was not available at the moment

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
     <section id="pricing-part" class="pricing">
       <div class="container-pr">
-        <h1>Popular Indian-Tour Destination</h1>
+        <h1 id="h1-of-pricing-main">Popular Indian-Tour Destination</h1>
         <div class="indian-dest-pr">
           <div class="card-pr active">
             <div class="image-pr">
